[gd_scene load_steps=2 format=3 uid="uid://f3gsw78cn0s8"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_5sr4c"]

[node name="Control" type="Node2D"]
script = ExtResource("1_5sr4c")

[node name="LevelSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("..")

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Host" type="Button" parent="Menu"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 42.0
text = "Host"

[node name="LobbyContainer" type="ScrollContainer" parent="Menu"]
layout_mode = 0
offset_left = 103.0
offset_top = 2.0
offset_right = 382.0
offset_bottom = 184.0

[node name="Lobbies" type="VBoxContainer" parent="Menu/LobbyContainer"]
layout_mode = 2

[node name="Refresh" type="Button" parent="Menu"]
layout_mode = 0
offset_left = -1.0
offset_top = 44.0
offset_right = 99.0
offset_bottom = 86.0
text = "Refresh"

[connection signal="pressed" from="Menu/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Menu/Refresh" to="." method="_on_refresh_pressed"]
